# vistrails-sdk

./: .gitignore  CLAUDE.md  DEVELOPER_GUIDE.md  LICENSE  QT6_MIGRATION.md  README.md  STATUS.md
examples/java/: OvalAction.java  README  RectAction.java  Testing.java  test_vt.xml
examples/python/: README  testing.py
examples/python/nativexml/: simple.py  test_vt.xml
examples/python/simple/: simple.py  test_vt.xml
examples/shapes/: CMakeLists.txt  Makefile  actions.cpp  actions.h  commands.cpp  commands.h  diagramitem.cpp  diagramitem.h  diagramscene.cpp  diagramscene.h  main.cpp  mainwindow.cpp  mainwindow.h
examples/shapes/ufdb/: add_action.cpp  add_action.h  add_action_xml.cpp  add_action_xml.h  delete_action.cpp  delete_action.h  delete_action_xml.cpp  delete_action_xml.h  domainfactory.cpp  domainfactory.h  move_action.cpp  move_action.h  move_action_xml.cpp  move_action_xml.h  scene_action.cpp  scene_action.h  scene_action_xml.cpp  scene_action_xml.h  shape.cpp  shape.h  shape_xml.cpp  shape_xml.h  xmlfactory.cpp  xmlfactory.h
examples/shapes/ufdb/specs/: schema.xml
examples/simple/: CMakeLists.txt  simple.cpp  test_vt.xml  test_vt_out.xml
src/: CMakeLists.txt  VisTrails.h
src/core/: Action.cpp  Action.h  ActionFactory.cpp  ActionFactory.h  Handler.cpp  Handler.h  Property.cpp  Property.h  Session.cpp  Session.h  SessionFocus.cpp  SessionFocus.h  Storage.cpp  Storage.h  Version.cpp  Version.h  VersionTree.cpp  VersionTree.h  VersionTreeFilter.cpp  VersionTreeFilter.h  VersionTreeLayout.cpp  VersionTreeLayout.h  VersionTreeTraversal.cpp  VersionTreeTraversal.h  Vistrail.cpp  Vistrail.h  XmlStorage.cpp  XmlStorage.h  global.cpp  global.h  global_private.h
src/gui/: CMakeLists.txt  about.ui  aspectpreservinglabel.hpp  delegate.cpp  delegate.hpp  galleryimageholder.cpp  galleryimageholder.hpp  gallerylabel.cpp  gallerylabel.hpp  gallerymainview.ui  galleryproxy.cpp  galleryproxy.hpp  galleryview.cpp  galleryview.hpp  imagecontainer.ui  imageviewer.cpp  imageviewer.hpp  imageviewer.ui  imagevisualizer.cpp  imagevisualizer.hpp  imagevisualizer.ui  info.hpp  preferencesdialog.cpp  preferencesdialog.hpp  preferencesdialog.ui  versionedit.cpp  versionedit.hpp  vistrailsui.qrc  vistrailsui.ui  vtmodel.cpp  vtmodel.hpp  vtnode.cpp  vtnode.hpp  vtsortfilterproxy.cpp  vtsortfilterproxy.hpp  vttableproxy.cpp  vttableproxy.hpp  vtwindow.cpp  vtwindow.hpp
src/gui/tree/: Color.cpp  Color.h  CommonWidgets.cpp  CommonWidgets.h  GraphicsView.cpp  GraphicsView.h  Theme.cpp  Theme.h  VersionProp.cpp  VersionProp.h  VersionView.cpp  VersionView.h  VistrailController.cpp  VistrailController.h
src/python/gui/: color.py  common_widgets.py  graphics_view.py  main_window.py  qt.py  theme.py  tree_layout_lw.py  version_prop.py  version_view.py  vistrails_tree_layout_lw.py  vtdemo.xml  vtdemo_out.xml
src/swig/: Action.i  ActionFactory.i  CMakeLists.txt  HPropertyIO.i  Handler.i  Property.i  Session.i  SessionFocus.i  Storage.i  TiXmlElement.i  Version.i  VersionTree.i  VersionTreeFilter.i  VersionTreeLayout.i  VersionTreeTraversal.i  Vistrail.i  Vistrail_VersionTree_wrap.i  Vistrails.i  XmlStorage.i
src/tinyxml/: Makefile  tinyxml.h
